Se crea estructura de paquetes y se comienza consumo de listar Canchas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tododeportes.tododeportesapp" >
+    package="com.tododeportes.tododeportesapp">
 
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".gui.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,8 +20,8 @@
         </activity>
         <activity
             android:name=".gui.RegistrarCanchaActivity"
-            android:label="@string/title_activity_registrar_cancha" >
-        </activity>
+            android:label="@string/title_activity_registrar_cancha"></activity>
+        <activity android:name=".gui.ListarCachasActivity"></activity>
     </application>
 
 </manifest>
