--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,19 +20,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".gui.RegistrarCanchaActivity">
+        <activity android:name=".gui.RegistrarCanchaActivity"
             android:label="@string/title_activity_registrar_cancha"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".gui.ListarCanchasActivity">
             <intent-filter>
                 <action android:name="android.intent.action.REGISTRARCANCHAACTIVITY" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".gui.RegistrarUsuarioActivity">
-            android:label="@string/title_activity_registrar_cancha"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".gui.RegistrarUsuarioActivity"
+            android:label="@string/title_activity_registrar_usuario">
             <intent-filter>
                 <action android:name="android.intent.action.REGISTRARUSUARIOACTIVITY" />
                 <category android:name="android.intent.category.DEFAULT" />
